test/e2e/02-envoy-sidecar/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        marin3r.3scale.net/status: "enabled"
      annotations:
        marin3r.3scale.net/node-id: nginx
        marin3r.3scale.net/ports: envoy-http:8080
        # Map envoy ports to the to the kind extraPortMappings so they
        # are reachable from the docker host
        marin3r.3scale.net/host-port-mappings: envoy-http:8080
    spec:
      containers:
        - name: nginx
          image: nginxdemos/hello:plain-text
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
