test/e2e/02-envoy-sidecar/04-validate-config-discovery.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  # Kind is configured to expose port 8080 to the host, so any pod that binds the 8080 port
  # of the host is reachable from the host that's running the tests
  # If the curl returns a 200 it means that the envoy sidecar has correctly picked the config
  # from the discovery service and correctly forwarding the requests to the nginx container
  - script: curl --fail -s localhost:8080 && kubectl -n $NAMESPACE create configmap deployment-config-discovery-ok
