test/e2e/02-envoy-sidecar/01-assert.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
status:
  readyReplicas: 1
