test/e2e/02-envoy-sidecar/03-assert.yaml
---
apiVersion: envoy.marin3r.3scale.net/v1alpha1
kind: EnvoyConfig
metadata:
  name: proxy-config
spec:
  nodeID: nginx
status:
  cacheState: InSync

---
apiVersion: envoy.marin3r.3scale.net/v1alpha1
kind: EnvoyConfigRevision
spec:
  nodeID: nginx
