test/e2e/02-envoy-sidecar/04-assert.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: deployment-config-discovery-ok
